<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome_view"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".views.WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            style="@style/main_text_welcome_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_text_welcome_activity" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_welcome_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="25dp">

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurView_welcome_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/second_text_welcome_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_text_card_welcome_activity" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/third_text_welcome_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/second_text_card_welcome_activity" />

                    <Button
                        android:id="@+id/button_welcome_view"
                        style="@style/main_button_welcome_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_background_button_welcome_view"
                        android:text="@string/button_welcome_activity"
                        android:textColor="@color/white" />

                </LinearLayout>
            </eightbitlab.com.blurview.BlurView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>